<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_import_contacts"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_basket" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_loyalty"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account" />

</menu>
